@@ -66,10 +66,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
